--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,10 +2,10 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
-    <title>로그인 - 가지가지한다</title>
+    <title>로그인 - 춤추는 고래</title>
 
     <link th:href="@{/css/bootstrap.css}" href="../static/css/bootstrap.css" rel="stylesheet">
-    <script type="text/javascript" th:src="@{/js/bootstrap.bundle.js}" href="../static/js/bootstrap.bundle.js"></script>
+    <script type="text/javascript" th:src="@{/js/bootstrap.bundle.js}"></script>
 
     <style>
 
