--- a/src/main/resources/templates/fragment/header.html
+++ b/src/main/resources/templates/fragment/header.html
@@ -3,18 +3,27 @@
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom mb-5" th:fragment="header">
-        <div class="container">
+        <div class="container d-flex justify-content-between">
             <div>
-                <a class="navbar-brand" th:href="@{'/'}">가지가지한다</a>
+                <a class="navbar-brand" th:href="@{'/'}" th:text="|춤추는 고래|"></a>
             </div>
-            <div class="">
-                <a data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="new">
-                    <i class="fas fa-pen-nib"></i>
+            <div class="header-icons d-flex align-content-center">
+                <a data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="new"
+                style="cursor: pointer;">
+                    <i class="fas fa-pen"></i>
                 </a>
-                <a th:href="@{/logout}" sec:authorize="isAuthenticated()">
-                    <i class="fas fa-sign-out-alt"></i>
-                </a>
-                <a th:href="@{/member/profile}"><i class="fas fa-user"></i></a>
+
+                <div class="dropdown d-flex align-content-center">
+                    <a  role="button" id="dropdownMenuLink" data-bs-toggle="dropdown">
+                        <i class="fas fa-user"></i>
+                    </a>
+                    <ul class="dropdown-menu p-0 m-0" aria-labelledby="dropdownMenuLink">
+                        <li><a class="dropdown-item p-0 w-auto" th:href="@{/member/profile}">프로필</a></li>
+                        <li><hr class="dropdown-divider"></li>
+                        <li><a class="dropdown-item p-0 w-auto" th:href="@{/logout}">로그아웃</a></li>
+
+                    </ul>
+                </div>
             </div>
         </div>
 
