--- a/src/main/resources/templates/member/passwordEditForm.html
+++ b/src/main/resources/templates/member/passwordEditForm.html
@@ -2,66 +2,46 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>프로필 수정 - 가지가지한다</title>
+    <title>프로필 수정 - 춤추는 고래</title>
 
     <link th:href="@{/css/bootstrap.css}" href="../css/bootstrap.css" rel="stylesheet">
+    <link th:href="@{/css/general.css}"  rel="stylesheet">
+    <link th:href="@{/css/member-forms.css}" rel="stylesheet">
+
+    <script type="text/javascript" th:src="@{/js/general.js}"></script>
     <script type="text/javascript" th:src="@{/js/bootstrap.bundle.js}"></script>
     <script src="https://kit.fontawesome.com/c2e67fd6d1.js" crossorigin="anonymous"></script>
 
-    <style>
-        html,
-        body {
-            height: 100%;
-        }
-
-        .field-error {
-            border-color: #dc3545;
-            color: #dc3545;
-            font-size: small;
-
-        }
-
-        .form-signin label {
-            margin: 6px 6px;
-        }
-
-        .form-signin button {
-            background-color:  #7952b3;
-            color: white;
-        }
-        .navbar .container{
-            max-width: 600px;
-        }
-
-    </style>
 </head>
 <body>
+<div th:replace ="~{fragment/writingModal :: modal}"></div>
+
 <div th:replace ="~{fragment/header :: header}"></div>
 <main class="form-signin d-flex justify-content-center mt-5">
-    <form th:action th:object="${passwordEditDto}" method="post" style="width: 25rem;">
-        <div style="height: 124px; width: 100%">
-            <h1 class="h3 mb-3 fw-normal text-center">프로필 수정</h1>
+    <form th:action th:object="${passwordChangeDto}" method="post" style="width: 25rem;">
+        <div class="d-flex justify-content-center" >
+            <h1 class="h3 mb-3 fw-normal">비밀번호 변경</h1>
         </div>
         <div class="mb-4">
-            <div>
+            <div class="mb-3">
                 <label for="inputPassword" th:text="#{member.passwordEdit.inputPassword}">새 비밀번호</label>
-                <input type="password" th:field="*{inputPassword}" class="form-control form-control-lg" id="inputPassword">
+                <input type="password" th:field="*{inputPassword}" class="form-control" id="inputPassword">
                 <div class="field-error" th:errors="*{inputPassword}">
                     성명 오류
                 </div>
             </div>
 
-            <div>
+            <div class="mb-3">
                 <label for="confirmPassword" th:text="#{member.passwordEdit.confirmPassword}">새 비밀번호 확인</label>
-                <input type="password" th:field="*{confirmPassword}" class="form-control form-control-lg" id="confirmPassword">
+                <input type="password" th:field="*{confirmPassword}" class="form-control" id="confirmPassword">
                 <div class="field-error" th:errors="*{confirmPassword}">
                     사용자 이름 오류
                 </div>
             </div>
 
-            <div class="mt-3">
-                <label for="password" th:text="#{member.password}">비밀번호</label>
-                <input type="password" th:field="*{currentPassword}" class="form-control form-control-lg" id="password">
+            <div>
+                <label for="password">계정 비밀번호</label>
+                <input type="password" th:field="*{currentPassword}" class="form-control" id="password">
                 <div class="field-error" th:errors="*{currentPassword}">
                     사용자 이름 오류
                 </div>
