--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -24,7 +24,7 @@
 
     <div class="container">
         <!-- 본문 카드 -->
-        <div th:if="${cards.size()==0}">
+        <div th:if="${cards.isEmpty()}">
             <div class="card">
                 <div class="card-body text-center">
                     <h5 class="card-title">아무도 글을 등록하지 않았어요</h5>
@@ -35,7 +35,7 @@
             </div>
         </div>
 
-        <div class="card mb-4" th:unless ="${cards.size()==0}" th:each="card : ${cards}" >
+        <div class="card mb-4" th:unless ="${cards.isEmpty()}" th:each="card : ${cards}" >
             <input type="hidden" name="postId" th:value="${card.postId}">
             <div class="card-header d-flex justify-content-between align-items-center"
                  th:with="username=${#authentication.name}">
@@ -64,8 +64,7 @@
             </section>
 
             <div class="card-body pt-1">
-                <p class="card-text" th:utext="${#strings.replace(card.description
-                ,nlString, '&lt;br /&gt;')}"></p>
+                <p class="card-text" th:utext="${#strings.replace(card.description, nlString, '&lt;br /&gt;')}"></p>
             </div>
 
             <div class="card-footer text-center px-0 py-2">
@@ -73,12 +72,30 @@
                    th:onclick="|javascript:sendNewLikesRequest('${card.postId}')|"></i>
             </div>
         </div>
+        <div class="mt-3">
+            <ul class="pagination justify-content-between">
 
+                <li class="page-item" th:classappend="${cards.first} ? 'disabled'">
+                    <a class="page-link" th:onclick="'javascript:page(' + ${cards.number - 1} + ')'">Previous</a>
+                </li>
 
+                <li class="page-item" th:classappend="${cards.last} ? 'disabled'">
+                    <a class="page-link" th:onclick="'javascript:page(' + ${cards.number + 1} + ')'">Next</a>
+                </li>
+            </ul>
+        </div>
     </div>
+
+
+
+
 </body>
 <script>
     $('.visual').slick();
+
+    function page(page){
+        location.href="/" + page;
+    }
 
     function formEmptyCheck(){
         //공백이면 알림창 띄우고 종료
