--- a/src/main/resources/templates/member/deleteMemberForm.html
+++ b/src/main/resources/templates/member/deleteMemberForm.html
@@ -31,7 +31,7 @@
 <main class="form-signin d-flex justify-content-center mt-5">
     <form th:action method="post" style="width: 25rem;">
         <div class="d-flex justify-content-center">
-            <h1 class="h3 mb-3 fw-normal">프로필 수정</h1>
+            <h1 class="h3 mb-3 fw-normal">회원 탈퇴</h1>
         </div>
         <div class="mb-4">
             <div>
@@ -40,9 +40,8 @@
                 <div class="field-error"></div>
             </div>
         </div>
-        <button class="w-100 btn btn-lg" type="submit" >수정</button>
+        <button class="w-100 btn btn-lg" onclick="return confirm('정말 탈퇴하시겠습니까?')" type="submit" >회원 탈퇴</button>
     </form>
 </main>
 </body>
-
 </html>
