--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -35,7 +35,7 @@
             </div>
         </div>
 
-        <div class="card mb-4" th:unless ="${cards.isEmpty()}" th:each="card : ${cards}" >
+        <div class="card mb-4" th:unless ="${cards.isEmpty()}" th:each="card : ${cards.content}" >
             <input type="hidden" name="postId" th:value="${card.postId}">
             <div class="card-header d-flex justify-content-between align-items-center"
                  th:with="username=${#authentication.name}">
@@ -74,13 +74,12 @@
         </div>
         <div class="mt-3">
             <ul class="pagination justify-content-between">
-
                 <li class="page-item" th:classappend="${cards.first} ? 'disabled'">
-                    <a class="page-link" th:onclick="'javascript:page(' + ${cards.number - 1} + ')'">Previous</a>
+                    <a class="page-link" th:onclick="'javascript:page(' + ${cards.number - 1} + ')'">이전</a>
                 </li>
 
                 <li class="page-item" th:classappend="${cards.last} ? 'disabled'">
-                    <a class="page-link" th:onclick="'javascript:page(' + ${cards.number + 1} + ')'">Next</a>
+                    <a class="page-link" th:onclick="'javascript:page(' + ${cards.number + 1} + ')'">다음</a>
                 </li>
             </ul>
         </div>
@@ -94,7 +93,7 @@
     $('.visual').slick();
 
     function page(page){
-        location.href="/" + page;
+        location.href="/?page=" + page;
     }
 
     function formEmptyCheck(){
