--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -87,7 +87,7 @@
 
         <div class="checkbox mb-3">
             <label>
-                <input type="checkbox" value="remember-me"> 로그인 상태 유지
+                <input type="checkbox" name="remember-me"> 로그인 상태 유지
             </label>
         </div>
         <div th:if="${session.errorMsg}">
