이메일을 이용한 비밀번호 찾기 완료

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -40,7 +40,7 @@
 
         <div class="d-flex justify-content-between mt-3">
             <a class="text-muted" th:href="@{/member/new}" th:text="#{member.signup}">회원가입</a>
-            <a class="text-muted" href="#">비밀번호 찾기</a>
+            <a class="text-muted" th:href="@{/forgot-password}">비밀번호 찾기</a>
         </div>
         <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
     </form>
