--- a/src/main/resources/templates/message.html
+++ b/src/main/resources/templates/message.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang>
+<html>
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
-    <div class="container text-center">
-    <h3>축하합니다! 회원가입이 성공적으로 이루어졌습니다.</h3>
+<div class="container text-center">
+    <h3>비밀번호가 성공적으로 초기화 됐습니다.</h3>
     <h4><a th:href="@{/login}">로그인하러 가기</a></h4>
 </div>
 </body>
