--- a/src/main/resources/templates/verify_fail.html
+++ b/src/main/resources/templates/verify_fail.html
@@ -6,8 +6,7 @@
 </head>
 <body>
 <div class="container text-center">
-    <h3>Sorry, we could not verify account. It maybe already verified,
-        or verification code is incorrect.</h3>
+    <h3>죄송합니다. 해당 계정을 인증할 수 없습니다.</h3>
 </div>
 </body>
 </html>
